Added layout and content for career page

--- a/career/career.html
+++ b/career/career.html
@@ -5,84 +5,190 @@
     <title> My Career</title>
     <meta charset="UTF-8">
     <meta name="Description" content="Info about my page">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js "></script>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark" id="nav-bar-style" ">
-            <a class="navbar-brand nav-title nav-link " href="index.html ">
-                <p class="nav-title text-white ">J.C.'s Career Page</p>
-            </a>
-        <button class="navbar-toggler " type="button " data-toggle="collapse " data-target="navbarNavDropdown " aria-controls="navbarNavDropdown " aria-expanded="false " aria-label="Toggle navigation ">
-            <span class="navbar-toggler-icon "></span>
-        </button> <!--Navbar Button-->
-
-            <div class="collapse navbar-collapse " id="navbarNavDropdown ">
-                <ul class="navbar-nav ">
-                    <li class="nav-item ">
-                        <a class="nav-link text-white " href="/aboutme.html ">
-                            About Me
-                        </a>
-                    </li>
-                    <!--About Me-->
-
-                    <li class="nav-item dropdown ">
-                        <a class="nav-link dropdown-toggle text-white " href="# " id="EduNavBarDropdownMenuLink " role="button " data-toggle="dropdown " aria-haspopup="true " aria-expanded="false ">
-                            My Education
-                        </a>
-                        <div class="dropdown-menu " aria-labelledby="EduNavBarDropdownMenuLink ">
-                            <a class="dropdown-item " href="# ">San Diego State University</a>
-                            <a class="dropdown-item " href="# ">San Diego Miramar/Mesa College</a>
-                        </div>
-                        <!--Education Options-->
-                    </li>
-                    <!--Education-->
-
-                    <li class="nav-item dropdown text-white ">
-                        <a class="nav-link dropdown-toggle text-white " href="# " id="CarNavBarDropdownMenuLink " role="button " data-toggle="dropdown " aria-haspopup="true " aria-expanded="false ">
-                                My Career
-                            </a>
-                        <div class="dropdown-menu " aria-labelledby="CarNavBarDropdownMenuLink ">
-                            <a class="dropdown-item " href="# ">San Diego State University: IT Division ServiceNow</a>
-                            <a class="dropdown-item " href="# ">San Diego State University: Instructional Technology Services</a>
-                            <a class="dropdown-item " href="# ">Best Buy Mira Mesa</a>
-                        </div>
-                        <!--Career Options-->
-                    </li>
-                    <!--Career-->
-                    <li class="nav-item dropdown ">
-                        <a class="nav-link dropdown-toggle text-white " href="# " id="ProjNavBarDropdownMenuLink " role="button " data-toggle="dropdown " aria-haspopup="true " aria-expanded="false ">
-                                Projects/Additional Studies
-                            </a>
-                        <div class="dropdown-menu " aria-labelledby="ProjNavBarDropdownMenuLink ">
-                            <a class="dropdown-item " href="# ">Github Webpage</a>
-                            <a class="dropdown-item " href="# ">Coursera Courses</a>
-                        </div>
-                        <!--Project Options-->
-                    </li>
-                    <!--Projects-->
-                </ul>
-                <!--Navbar List-->
-            </div>
-        </nav>
-        <!-- End of Navbar-->
-    </header>
-
-    <!--Main Content Box for Landing Page-->
-    <div class="row content-box container container-fluid ">
-        <p class="content-box-text "> Put Career Here
-        </p>
-    </div>
-    <!--Image Box-->
-    <div class="row image-box container container-fluid ">
         <div>
-            <img src=" " class="img-fluid " height=auto max-width="80% " ">
+            <h1>Juan Pina-Sanz</h1>
+            <h2>Bachelor of Computer Science</h2>
+        </div>
+    </header>
+    <div id="nav-placeholder"></div>
+    <div class="main-content">
+        <div class="site-wrap">
+            <div class="row">
+                <div class="text-content-box col-md-8 col-sm-12">
+                    <h3 class="primary"><a href="sdsu.html"> San Diego State University: IT Divison, ServiceNow Deployment </a></h3>
+                    <h3 class="secondary">Student Developer / Application Administrator</h3>
+                    <h3 class="secondary">Feb 2020 - Aug 2020</h3>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+                <div class="image-box col-md-4 col-sm-12">
+                    <img src="https://live.staticflickr.com/65535/50588505831_67e8e90269_c.jpg" class="align-right" style='height:95%; width: 95%; object-fit: contain;' />
+                </div>
             </div>
-            <div> Image Caption</div>
+            <!--Upper-->
+
+            <div class="row">
+                <div class="col-md-8">
+                    <h3 class="secondary">Responsibilities</h3>
+                    <ul>
+                        <div>
+                            <li><a>As an Application Administrator:</a>
+                                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                                    laborum.
+                                </p>
+                            </li>
+                            <li><a>As a Student Developer:</a>
+                                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                                    laborum.
+                                </p>
+                                <ul>
+                                    <li>
+                                        <p class="project-title">SDSU Service Catalog Development</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                                            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+                                            anim id est laborum.</p>
+                                        <p><a href="">Git-Hub Project Link</a></p>
+                                    </li>
+                                    <li>
+                                        <p class="project-title">SDSU ITD Mobile Agent iOS/Android App</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                                            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+                                            anim id est laborum.</p>
+                                        <p><a href="">Git-Hub Project Link</a></p>
+                                    </li>
+                                </ul>
+                            </li>
+                        </div>
+
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <!--Images Right Side of responsibilities-->
+                </div>
             </div>
+            <!--Responsibilities List-->
+        </div>
+        <!--Site-Wrap-->
+
+        <div class="site-wrap">
+            <div class="row">
+                <div class="col-md-8">
+                    <p>
+                        <h3 class="primary"><a>San Diego State University: Instructional Technology Services</a></h3>
+                        <h3 class="secondary">Student Assistant</h3>
+                        <h3 class="secondary">Oct 2019 - Jun 2020</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </p>
+                </div>
+                <div class="image-box col-md-4">
+                    <img class="edu-catalog-img" src="https://live.staticflickr.com/65535/50587737353_d1aba44d7e_b.jpg" style='height:"100%"; width:"100%; object-fit: contain;' />
+                </div>
+            </div>
+            <!--Upper-->
+            <div class="row">
+                <div class="col-md-8">
+                    <h3 class="secondary">Responsibilities</h3>
+                    <ul>
+                        <div class="row">
+                            <div class="courses-left-col col">
+                                <li><a>As a Student Assistant:</a>
+                                    <p>I Worked to troubleshoot hardware and software issues remotely and on location for faculty and staff. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                </li>
+                                <li><a>As an ITS Project Team member:</a>
+                                    <p>Working closely with fellow ITS team members, I lead and participated in various projects for the Instructional Technology Services Department. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                                        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                    <ul>
+                                        <li>
+                                            <p class="project-title">Parscore Excel Sheet Conversion Tool</p>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                                                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                                                mollit anim id est laborum.</p>
+                                            <p><a href="">Git-Hub Project Link</a></p>
+                                        </li>
+                                        <li>
+                                            <p class="project-title">Audio to Subtitle Amazon Web Services Project</p>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                                                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                                                mollit anim id est laborum.</p>
+                                            <p><a href="">Git-Hub Project Link</a></p>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </div>
+                        </div>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <!--Images Right Side of responsibilities-->
+                </div>
+            </div>
+            <!--Lower-->
+        </div>
+        <!--Site Wrap-->
+        <div class="site-wrap">
+            <div class="row">
+                <div class="col-md-8">
+                    <p>
+                        <h3 class="primary"><a>Best Buy: San Diego, CA</a></h3>
+                        <h3 class="secondary">Sales Associate/Geek Squad Agent/Inventory Specialist</h3>
+                        <h3 class="secondary">Nov 2010 - Oct 2019</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </p>
+                </div>
+                <div class="image-box col-md-4">
+                    <img class="edu-catalog-img" src="https://live.staticflickr.com/65535/50587737353_d1aba44d7e_b.jpg" style='height:"100%"; width:"100%; object-fit: contain;' />
+                </div>
+            </div>
+            <!--Upper-->
+            <div class="row">
+                <div class="col-md-8">
+                    <h3 class="secondary">Responsibilities</h3>
+                    <ul>
+                        <div class="row">
+                            <div class="courses-left-col col">
+                                <li><a>As a Sales Associate:</a>
+                                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                                        est laborum.</p>
+                                </li>
+                                <li><a>As a Geek Squad Agent:</a>
+                                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                                        est laborum.</p>
+                                </li>
+                                <li><a>As an Inventory Specialist:</a>
+                                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                                        est laborum.</p>
+                                </li>
+                            </div>
+                        </div>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <!--Images Right Side of responsibilities-->
+                </div>
+            </div>
+            <!--Lower-->
+        </div>
+        <!--Site Wrap-->
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js "></script>
+    <script src="/js/pageload-scripts.js "></script>
+    <script src="/js/bootstrap.min.js "></script>
 </body>
 
 </html>
