--- a/education/education.html
+++ b/education/education.html
@@ -5,8 +5,8 @@
     <title> My Education</title>
     <meta charset="UTF-8">
     <meta name="Description" content="Info about my page">
-    <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
@@ -22,11 +22,26 @@
 
             <div class="text-content-box col-md-8">
                 <p>
-                    <h3 class="school-title"><a href="sdsu.html"> San Diego State University</a></h3>
-                    <h3 class="school-degree">Bachelor of Science in Applied Arts and Sciences: Computer Science</h3>
-                    <h3 class="graduating-year">August 2020</h3>
+                    <h3 class="primary"><a href="sdsu.html"> San Diego State University</a></h3>
+                    <h3 class="secondary">Bachelor of Science in Applied Arts and Sciences: Computer Science</h3>
+                    <h3 class="secondary">Aug 2020</h3>
                     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <h3 class="secondary">Featured Courses</h3>
+                    <ul>
+                        <div class="row">
+                            <div class="courses-left-col col">
+                                <li><a class="course-links">Data Structures</a></li>
+                                <li><a class="course-links">Algorithms and their Analysis</a></li>
+                                <li><a class="course-links">Operating Systems</a></li>
+                            </div>
+                            <div class="courses-right-col col">
+                                <li><a class="course-links">Database Theory and Implementation</a></li>
+                                <li><a class="course-links">3D Game Programming</a></li>
+                                <li><a class="course-links">Wirless Networks</a></li>
+                            </div>
+                        </div>
+                    </ul>
                 </p>
             </div>
             <!--Text Box-->
@@ -41,11 +56,27 @@
 
             <div class="text-content-box col-md-8">
                 <p>
-                    <h3 class="school-title"><a href="miramar_mesa.html">San Diego Miramar/Mesa College</a></h3>
-                    <h3 class="school-degree">Associate of Applied Mathematics</h3>
-                    <h3 class="graduating-year">May 2018</h3>
+                    <h3 class="primary"><a href="miramar_mesa.html">San Diego Miramar/Mesa College</a></h3>
+                    <h3 class="secondary">Associate of Applied Mathematics</h3>
+                    <h3 class="secondary">May 2018</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <h3 class="secondary">Featured Courses</h3>
+                    <ul>
+                        <div class="row">
+                            <div class="courses-left-col col">
+                                <li><a class="course-links">Discrete Mathematics (Honors)</a></li>
+                                <li><a class="course-links">Linear Algebra (Honors)</a></li>
+                                <li><a class="course-links">Differential Equations</a></li>
+                                <li><a>Calculus 1, 2, 3</a></li>
+                            </div>
+                            <div class="courses-right-col col">
+                                <li><a class="course-links">Java Programming</a></li>
+                                <li><a class="course-links">C++ Programming</a></li>
+                                <li><a class="course-links">Systems Design and Analysis</a></li>
+                            </div>
+                        </div>
+                    </ul>
                 </p>
             </div>
             <!--Text Box-->
