--- a/projectsandadditionalstudies/projects.html
+++ b/projectsandadditionalstudies/projects.html
@@ -2,89 +2,169 @@
 <html>
 
 <head>
-    <title> My Projects</title>
+    <title> Projects/Additional Studies</title>
     <meta charset="UTF-8">
-    <meta name="Description" content="Info about my page">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js "></script>
+    <meta name="Description" content="Projects/Additinal Studies">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark" id="nav-bar-style" ">
-            <a class="navbar-brand nav-title nav-link " href="index.html ">
-                <p class="nav-title text-white ">J.C.'s Career Page</p>
-            </a>
-        <button class="navbar-toggler " type="button " data-toggle="collapse " data-target="navbarNavDropdown " aria-controls="navbarNavDropdown " aria-expanded="false " aria-label="Toggle navigation ">
-            <span class="navbar-toggler-icon "></span>
-        </button> <!--Navbar Button-->
-
-            <div class="collapse navbar-collapse " id="navbarNavDropdown ">
-                <ul class="navbar-nav ">
-                    <li class="nav-item ">
-                        <a class="nav-link text-white " href="/aboutme.html ">
-                            About Me
-                        </a>
-                    </li>
-                    <!--About Me-->
-
-                    <li class="nav-item dropdown ">
-                        <a class="nav-link dropdown-toggle text-white " href="# " id="EduNavBarDropdownMenuLink " role="button " data-toggle="dropdown " aria-haspopup="true " aria-expanded="false ">
-                            My Education
-                        </a>
-                        <div class="dropdown-menu " aria-labelledby="EduNavBarDropdownMenuLink ">
-                            <a class="dropdown-item " href="# ">San Diego State University</a>
-                            <a class="dropdown-item " href="# ">San Diego Miramar/Mesa College</a>
-                        </div>
-                        <!--Education Options-->
-                    </li>
-                    <!--Education-->
-
-                    <li class="nav-item dropdown text-white ">
-                        <a class="nav-link dropdown-toggle text-white " href="# " id="CarNavBarDropdownMenuLink " role="button " data-toggle="dropdown " aria-haspopup="true " aria-expanded="false ">
-                                My Career
-                            </a>
-                        <div class="dropdown-menu " aria-labelledby="CarNavBarDropdownMenuLink ">
-                            <a class="dropdown-item " href="# ">San Diego State University: IT Division ServiceNow</a>
-                            <a class="dropdown-item " href="# ">San Diego State University: Instructional Technology Services</a>
-                            <a class="dropdown-item " href="# ">Best Buy Mira Mesa</a>
-                        </div>
-                        <!--Career Options-->
-                    </li>
-                    <!--Career-->
-                    <li class="nav-item dropdown ">
-                        <a class="nav-link dropdown-toggle text-white " href="# " id="ProjNavBarDropdownMenuLink " role="button " data-toggle="dropdown " aria-haspopup="true " aria-expanded="false ">
-                                Projects/Additional Studies
-                            </a>
-                        <div class="dropdown-menu " aria-labelledby="ProjNavBarDropdownMenuLink ">
-                            <a class="dropdown-item " href="# ">Github Webpage</a>
-                            <a class="dropdown-item " href="# ">Coursera Courses</a>
-                        </div>
-                        <!--Project Options-->
-                    </li>
-                    <!--Projects-->
-                </ul>
-                <!--Navbar List-->
-            </div>
-        </nav>
-        <!-- End of Navbar-->
-    </header>>
-
-    <div class="row container container-fluid " id="main ">
-        <!--Main Content Box for Landing Page-->
-        <div class="row content-box container container-fluid ">
-            <p class="content-box-text "> Put Projects Here
-            </p>
+        <div>
+            <h1>Juan Pina-Sanz</h1>
+            <h2>Bachelor of Computer Science</h2>
         </div>
-        <!--Image Box-->
-        <div class="row image-box container container-fluid ">
-            <div>
-                <img src=" " class="img-fluid " height=auto max-width="80% " ">
+    </header>
+    <div id="nav-placeholder"></div>
+    <div class="main-content">
+
+        <div class="site-wrap" style=' flex-flow:column wrap;outline: 2px dashed green;'>
+            <div class="row">
+                <div style='outline: 2px dashed blue;'>
+                    <h3>Additional Studies</h3>
+                </div>
             </div>
-            <div> Image Caption</div>
+
+            <div class="row" style='outline: 1px dashed green;'>
+                <ul>
+                    <li>
+                        <h3 class="secondary">Coursera</h3>
+                        <div style='display:flex; flex-direction: row;'>
+                            <div class="col-8">
+                                <p>Course Description</p>
+                            </div>
+                            <div class="col-4" style='outline: 1px dashed peachpuff;'>
+                                <p>IMAGE PLACE HOLDER</p>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
             </div>
+            <div class="row">
+                <div style='outline: 2px dashed blue;'>
+                    <h3>Certifications</h3>
+                </div>
             </div>
+            <div class="row" style='outline: 1px dashed green;'>
+                <ul>
+                    <li>
+                        <h3 class="secondary">ServiceNow Systems Administrator</h3>
+                        <div style='display:flex; flex-direction: row;'>
+                            <div class="col-8">
+                                <p>Course Description</p>
+                            </div>
+                            <div class="col-4" style='outline: 1px dashed peachpuff;'>
+                                <p>IMAGE PLACE HOLDER</p>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+
+            <!--Responsibilities List-->
+        </div>
+        <!--Site-Wrap-->
+
+        <div class="site-wrap row" style='outline: 2px dashed green;'>
+            <div class="col-10 " style='outline: 2px dashed blue;'>
+                <h3 class="primary">
+                    <a href="">
+                        <p style='text-align: center;'>Web Page Road Map</p>
+                    </a>
+                </h3>
+            </div>
+            <div class="col-2" style='outline: 2px dashed red;'>
+                <!-- <img src="https://icon-icons.com/icons2/2429/PNG/128/trello_logo_icon_147221.png" class="align-right" style='height:50%; width: 50%; object-fit: contain;' /> -->
+            </div>
+            <!--Responsibilities List-->
+        </div>
+
+        <div class="site-wrap" style=' outline: 2px dashed green;'>
+            <div class="row" style='display: flex; flex-flow: row wrap;'>
+
+                <div class="project-content-box col-4 col-xl-3" style='outline: 1px dashed blue;'>
+                    <div style='flex-direction: column; outline: 1px dashed purple;'>
+                        <h3 class="primary"><a href="sdsu.html"> Web Development </a></h3>
+                        <h3 class="secondary">Description 1</h3>
+                        <h3 class="secondary">Description 2</h3>
+                        <div>
+                            <p> Starting in the Fall of 2020, I have begun a project to produce a website that will allow me to not only learn new techniques and develop skills in web development, but also grant me the opportunity to demonstrate some of my
+                                work
+                            </p>
+                        </div>
+                    </div>
+                    <div class="image-box" style='outline: 1px dashed red;'>
+                        <img src="https://live.staticflickr.com/65535/50588505831_67e8e90269_c.jpg" style=' height:95%; width: 95%; object-fit: contain;' />
+                    </div>
+                </div>
+
+                <div class="col-4 col-xl-3 " style='outline: 1px dashed blue;'>
+                    <h3 class="primary"><a href="sdsu.html"> Project 1 </a></h3>
+                    <h3 class="secondary">Description 1</h3>
+                    <h3 class="secondary">Description 2</h3>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <div class="image-box" style='outline: 2px dashed red;'>
+                        <img src="https://live.staticflickr.com/65535/50588505831_67e8e90269_c.jpg" class="align-self-center" style='height:95%; width: 95%; object-fit: contain;' />
+                    </div>
+                </div>
+
+                <div class="col-4 col-xl-3 " style='outline: 1px dashed blue;'>
+                    <h3 class="primary"><a href="sdsu.html"> Project 1 </a></h3>
+                    <h3 class="secondary">Description 1</h3>
+                    <h3 class="secondary">Description 2</h3>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <div class="image-box" style='outline: 2px dashed red;'>
+                        <img src="https://live.staticflickr.com/65535/50588505831_67e8e90269_c.jpg" class="align-self-center" style='height:95%; width: 95%; object-fit: contain;' />
+                    </div>
+                </div>
+
+                <div class="col-4 col-xl-3 " style='outline: 1px dashed blue;'>
+                    <h3 class="primary"><a href="sdsu.html"> Project 1 </a></h3>
+                    <h3 class="secondary">Description 1</h3>
+                    <h3 class="secondary">Description 2</h3>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <div class="image-box" style='outline: 2px dashed red;'>
+                        <img src="https://live.staticflickr.com/65535/50588505831_67e8e90269_c.jpg" class="align-self-center" style='height:95%; width: 95%; object-fit: contain;' />
+                    </div>
+                </div>
+
+                <div class="col-4 col-md-3 " style='outline: 1px dashed blue;'>
+                    <h3 class="primary"><a href="sdsu.html"> Project 1 </a></h3>
+                    <h3 class="secondary">Description 1</h3>
+                    <h3 class="secondary">Description 2</h3>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <div class="image-box" style='outline: 2px dashed red;'>
+                        <img src="https://live.staticflickr.com/65535/50588505831_67e8e90269_c.jpg" class="align-self-center" style='height:95%; width: 95%; object-fit: contain;' />
+                    </div>
+                </div>
+
+                <div class="col-4 col-md-3 " style='outline: 1px dashed blue;'>
+                    <h3 class="primary"><a href="sdsu.html"> Project 1 </a></h3>
+                    <h3 class="secondary">Description 1</h3>
+                    <h3 class="secondary">Description 2</h3>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <div class="image-box" style='outline: 2px dashed red;'>
+                        <img src="https://live.staticflickr.com/65535/50588505831_67e8e90269_c.jpg" class="align-self-center" style='height:95%; width: 95%; object-fit: contain;' />
+                    </div>
+                </div>
+                <!--Content List-->
+            </div>
+            <!--Row-->
+        </div>
+        <!--Site-Wrap-->
+    </div>
+    <!--Main Content-->
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js "></script>
+    <script src="/js/pageload-scripts.js "></script>
+    <script src="/js/bootstrap.min.js "></script>
 </body>
 
 </html>
