Added content to Education and Career page, continued formatting pages to improve responsiveness

--- a/aboutme/aboutme.html
+++ b/aboutme/aboutme.html
@@ -56,19 +56,23 @@
             <!--Image Box-->
 
         </div>
-        <div class="site-wrap row">
-
-            <div class="text-content-box">
-                <p>
-                    <h3 id="main-section-header">Contact Me</h3>
-                    <div class="col-md-6">
+        <div class="site-wrap">
+            <div class="text-content-box" style=' display: flex; flex-flow: column wrap;'>
+                <div class="col-12">
+                    <h3>Contact Me</h3>
+                </div>
+                <div class="col-12" style='display: flex; flex-flow: row wrap; '>
+                    <div class="col-4">
                         <p>Phone Number: (858) 382-8303</p>
                         <p>Email: &nbsp;<a>jpinasanz@gmail.com</a></p>
                     </div>
-                    <div class="col-md-6">
-                        <p>LinkedIn: &nbsp; <a href="https://www.linkedin.com/in/juan-pi%C3%B1a-sanz-159954129/" color="black"> linkedin.com/in/juan-piña-sanz-159954129</a> </p>
+                    <div class='col-4'>
+                        <p>LinkedIn:<a href="https://www.linkedin.com/in/juan-pi%C3%B1a-sanz-159954129/" color="black"> &nbsp; linkedin.com/in/juan-piña-sanz-159954129</a> </p>
                     </div>
-                </p>
+                    <div class='col-4'>
+                        <!--Content-->
+                    </div>
+                </div>
             </div>
             <!--Text Box-->
         </div>
