--- a/career/career.html
+++ b/career/career.html
@@ -24,8 +24,13 @@
                     <h3 class="primary"><a href="sdsu.html"> San Diego State University: IT Divison, ServiceNow Deployment </a></h3>
                     <h3 class="secondary">Student Developer / Application Administrator</h3>
                     <h3 class="secondary">Feb 2020 - Aug 2020</h3>
-                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p> During the Spring 2020 semester, I was approached with the opportunity to work with IT User Services to develop the ServiceNow platform for the university. My prior experience with winning the SDSU/ServiceNow Hackathon made me a prime
+                        candiate for the Student Developer position on the development team. In February I began working with the IT User Services team. My core responsibilities on the team was to support IT division staff with the utilization and development
+                        of the ServiceNow platform for campus use. Often times my tasks involved troubleshooting issues submitted by users, implementing functions and features of the platform, and configuring forms and user interfaces on the web portal.
+                        <p>Once I had demonstrated a solid understanding of both the ServiceNow platform, I became one of the main contributors to the SDSU Service Catalog project. Our goal was to migrate the IT User Services listings, which were previously
+                            listed on Azure or hosted independently by their respective departments, to a centralized university service portal.
+                        </p>
+                    </p>
                 </div>
                 <div class="image-box col-md-4 col-sm-12">
                     <img src="https://live.staticflickr.com/65535/50588505831_67e8e90269_c.jpg" class="align-right" style='height:95%; width: 95%; object-fit: contain;' />
@@ -34,20 +39,19 @@
             <!--Upper-->
 
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-8" style='outline: 1px dashed blue;'>
                     <h3 class="secondary">Responsibilities</h3>
                     <ul>
                         <div>
                             <li><a>As an Application Administrator:</a>
-                                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                                    laborum.
+                                <p> I addressed IT user issues and concerns regarding the platform, through the ServiceNow Incident Management System. I implemented a number of features on the ServiceNow platform to improver the user experience. Implementing
+                                    new work-flow processes to expedite IT tasks and procedures.
                                 </p>
                             </li>
                             <li><a>As a Student Developer:</a>
-                                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                                    laborum.
+                                <p> I was my responsibile for being familiar with core ServiceNow platform functions and basics as well as have an understanding of the web-client's structure and scripts. Development of features and functions including the
+                                    service catalog and web portal, required knowledge of the platform's data table interactions, XML document formatting, and
+
                                 </p>
                                 <ul>
                                     <li>
@@ -55,14 +59,12 @@
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                                             commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
                                             anim id est laborum.</p>
-                                        <p><a href="">Git-Hub Project Link</a></p>
                                     </li>
                                     <li>
                                         <p class="project-title">SDSU ITD Mobile Agent iOS/Android App</p>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                                             commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
                                             anim id est laborum.</p>
-                                        <p><a href="">Git-Hub Project Link</a></p>
                                     </li>
                                 </ul>
                             </li>
