--- a/education/education.html
+++ b/education/education.html
@@ -19,17 +19,19 @@
     <div id="nav-placeholder"></div>
     <div class="main-content">
         <div class="site-wrap">
-
             <div class="text-content-box col-md-8">
-                <p>
+                <div>
                     <h3 class="primary"><a href="sdsu.html"> San Diego State University</a></h3>
                     <h3 class="secondary">Bachelor of Science in Applied Arts and Sciences: Computer Science</h3>
                     <h3 class="secondary">Aug 2020</h3>
-                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p> In the Fall of 2018 I started my first semester at San Diego State University (SDSU) after transferring from San Diego Miramar College. SDSU had long been one of my top choices for universities, their resources and reputation within
+                        San Diego, competative Computer Science program, combined with strong recommendations from counselors and peers, made SDSU one of my top choices to continue my academics. At SDSU, I further developed my skills and knowledge in
+                        computer science. I learned how to design and build practical applications with Java, C++, Python and SQL.
+                        <p>SDSU also provided me the opportunity to participate in events such as career fairs, seminars and hackathons. </p>
+                    </p>
                     <h3 class="secondary">Featured Courses</h3>
                     <ul>
-                        <div class="row">
+                        <div class="row" style='display:flex;'>
                             <div class="courses-left-col col">
                                 <li><a class="course-links">Data Structures</a></li>
                                 <li><a class="course-links">Algorithms and their Analysis</a></li>
@@ -42,53 +44,53 @@
                             </div>
                         </div>
                     </ul>
-                </p>
+                </div>
+                <div>
+                    <h3 class="secondary">Accomplishements</h3>
+                    <ul>
+                        <li><a href="" style='color: black;'>San Diego State University/ServiceNow 2019 Hackathon</a></li>
+                    </ul>
+                </div>
             </div>
             <!--Text Box-->
-
             <div class="image-box col-md-4">
                 <img class="edu-catalog-img" src="https://live.staticflickr.com/65535/50588505831_67e8e90269_c.jpg" class="align-right">
             </div>
             <!--Image Box-->
-
         </div>
         <div class="site-wrap">
-
             <div class="text-content-box col-md-8">
-                <p>
-                    <h3 class="primary"><a href="miramar_mesa.html">San Diego Miramar/Mesa College</a></h3>
-                    <h3 class="secondary">Associate of Applied Mathematics</h3>
-                    <h3 class="secondary">May 2018</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    <h3 class="secondary">Featured Courses</h3>
-                    <ul>
-                        <div class="row">
-                            <div class="courses-left-col col">
-                                <li><a class="course-links">Discrete Mathematics (Honors)</a></li>
-                                <li><a class="course-links">Linear Algebra (Honors)</a></li>
-                                <li><a class="course-links">Differential Equations</a></li>
-                                <li><a>Calculus 1, 2, 3</a></li>
-                            </div>
-                            <div class="courses-right-col col">
-                                <li><a class="course-links">Java Programming</a></li>
-                                <li><a class="course-links">C++ Programming</a></li>
-                                <li><a class="course-links">Systems Design and Analysis</a></li>
-                            </div>
-                        </div>
-                    </ul>
+                <h3 class="primary"><a href="miramar_mesa.html">San Diego Miramar/Mesa College</a></h3>
+                <h3 class="secondary">Associate of Applied Mathematics</h3>
+                <h3 class="secondary">May 2018</h3>
+                <p> My post-high school academic career began at San Diego Community College District: Miramar. Living in San Diego, SDCCD: Miramar was convinently located nearby and offered the majority of lower division classes required to transfer to most
+                    4-year universities. Here, I developed my interest in mathematics and computer science. I excelled in mathematics taking Honors level Discrete Math and Linear Algebra. However, in order to complete some major pre-requisite requirements
+                    for Mathematics and Computer Science, I cross-enrolled at San Diego State University in the Spring of 2016 to complete the full year of Java Programming necessary for transfer to most CSU and UC schools.
                 </p>
+                <h3 class="secondary">Featured Courses</h3>
+                <ul>
+                    <div class="row">
+                        <div class="courses-left-col col">
+                            <li><a class="course-links">Discrete Mathematics (Honors)</a></li>
+                            <li><a class="course-links">Linear Algebra (Honors)</a></li>
+                            <li><a class="course-links">Differential Equations</a></li>
+                            <li><a>Calculus 1, 2, 3</a></li>
+                        </div>
+                        <div class="courses-right-col col">
+                            <li><a class="course-links">Java Programming</a></li>
+                            <li><a class="course-links">C++ Programming</a></li>
+                            <li><a class="course-links">Systems Design and Analysis</a></li>
+                        </div>
+                    </div>
+                </ul>
             </div>
             <!--Text Box-->
-
             <div class="image-box col-md-4">
                 <img class="edu-catalog-img" src="https://live.staticflickr.com/65535/50587737353_d1aba44d7e_b.jpg" height="90%" width="100%">
             </div>
             <!--Image Box-->
-
         </div>
     </div>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js "></script>
     <script src="/js/pageload-scripts.js "></script>
     <script src="/js/bootstrap.min.js "></script>
