--- a/index.html
+++ b/index.html
@@ -20,17 +20,19 @@
 
     <div id="nav-placeholder"></div>
     <div id="main-content">
-        <div class="site-wrap " id="main-content ">
-            <h3>Welcome to my page!</h3>
-            <div class="row content-box container container-fluid ">
-                <p class="content-box-text "> Hello! My name is JC Pina-Sanz. I am a fresh graduate of Computer Science from San Diego State University.
-                    <p>I have a passion for software development and a desire to build applications that help people and grow business. Through my work experiences and academic pursuits, I have developed strong team-based skills and a proficiency to lead
-                        and mentor others. My career goal is to grow and work as a software engineer</p>
-                </p>
+        <div class="site-wrap">
+            <div class="row">
+                <h3>Welcome to my page!</h3>
+                <div class="content-box">
+                    <p> Hello! My name is JC Pina-Sanz. I am a recent graduate of Computer Science from San Diego State University.
+                        <p>This is my webpage where I'd like to show you many of the assignments, projects and experiences I have had throughout my years studying computer science.</p>
+                        <p>This site is very much a work in progress as I add more web functions, coding projects and more! I hope it will help you get to know me, my passions and what interests me about computer science</p>
+                        <p>Check out my site's roadmap to progress, updates and what I have planned.<a href="">&nbsp; Site Road Map</a></p>
+                    </p>
+                </div>
             </div>
             <!--Text Box-->
             <div class="row image-box container container-fluid ">
-                <p>This page is intended to showcase my education and my work. I hope it will help you get to know me and give you an idea of who I am and what I can do!</p>
             </div>
             <!--Image Box-->
         </div>
